--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,7 +7,9 @@ on:
             - '*'
 jobs:
     unit-test:
-        container: cuaesd/aesd-autotest:24-unit-test
+        container:
+          image: cuaesd/aesd-autotest:24-assignment1
+          options: --network aesd-network  # This tells Docker to use the specified network
         runs-on: self-hosted
         steps:
           - uses: actions/checkout@v2
@@ -16,7 +18,9 @@ jobs:
           - name: Run unit test
             run: ./unit-test.sh
     full-test:
-        container: cuaesd/aesd-autotest:24-assignment1
+        container:
+          image: cuaesd/aesd-autotest:24-assignment1
+          options: --network aesd-network  # This tells Docker to use the specified network
         runs-on: self-hosted
         steps:
           - uses: actions/checkout@v2
